fix(header): more menu overflow on small viewport height

--- a/packages/app-frontend/src/assets/style/index.styl
+++ b/packages/app-frontend/src/assets/style/index.styl
@@ -135,6 +135,11 @@ $arrow-color = $vue-ui-color-dark
 .vue-ui-dark-mode .v-popper__popper.v-popper--theme-tooltip .vue-ui-icon svg
   fill #666
 
+
+.v-popper__popper.v-popper--theme-dropdown .v-popper__inner
+  max-height calc(100vh - 32px - 8px - 4px)
+  overflow-y auto
+
 .scroll-smooth
   scroll-behavior smooth
 
